[tool.poetry]
name = "lights"
version = "0.0.1"
description = "Lights"
authors = ["Ra <ra@tcp.direct>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
httpx = ">=0.23.1"
pydantic = ">=1.10.2"
yarl = ">=1.8.1"

[tool.poetry.dev-dependencies]
black = ">=22.10.0"
rich = ">=12.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
