[tool.poetry]
name = "lights"
version = "0.0.1"
description = "Lights"
authors = ["Ra <ra@tcp.direct>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
httpx = ">=0.23.1"
pydantic = ">=1.10.2"
yarl = ">=1.8.1"
ujson = "^5.5.0"
loguru = "^0.6.0"
orjson = "^3.8.2"

[tool.poetry.dev-dependencies]
black = ">=22.10.0"
rich = ">=12.6.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
pylint = "^2.15.7"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
ignore = ["W503", "E501", "E203"]
extras = ["E501", "E203"]
